[package]
name = "openvr-bindings"
version = "2.2.3"
authors = [
    "Colin Sherratt",
    "Erick Tryzelaar",
    "Rene Eichhorn",
    "Benjamin Saunders",
    "Kaitlyn Wimer"
    
]
license = "MIT"
description = "Raw unsafe system binding for openvr"
repository = "https://github.com/kaitlynkittyy/openvr-bindings-rs"
keywords = ["vr", "vive", "steamvr", "openvr"]
categories = [ "hardware-support", "external-ffi-bindings" ]

exclude = [
    "openvr/samples/*",
    "openvr/bin/*",
    "openvr/lib/*",
    "openvr/controller_callouts/*",
]
build = "build.rs"

[badges]
maintenance = { status = "passively-maintained" }

[build-dependencies]
cmake = "0.1"
bindgen = { version = "0.69", optional = true }

[lib]
name = "openvr-bindings"
path = "lib.rs"

[features]
default = []
buildtime_bindgen = ["bindgen"]
