[package]
name = "openvr_bindings"
version = "2.1.0"
edition = "2021"
authors = [
    "Colin Sherratt",
    "Erick Tryzelaar",
    "Rene Eichhorn",
    "Benjamin Saunders",
    "Kaitlyn Wimer"
]
license = "MIT"
readme = "README.md"
description = "Unsafe bindings for the OpenVR API. Forked version of https://github.com/rust-openvr/rust-openvr with updated support for newer OpenVR API."
repository = "https://github.com/kaitlynkittyy/openvr-bindings-rs"
keywords = ["vr", "vive", "steamvr", "openvr"]
categories = [ "hardware-support", "external-ffi-bindings" ]

exclude = [
    "openvr/samples/*",
    "openvr/bin/*",
    "openvr/lib/*",
    "openvr/controller_callouts/*",
]
build = "build.rs"

[badges]
maintenance = { status = "passively-maintained" }

[build-dependencies]
cmake = "0.1"
bindgen = { version = "0.69", optional = true }

[lib]
name = "openvr_bindings"
path = "lib.rs"

[features]
default = []
buildtime_bindgen = ["bindgen"]
